--- a/app/src/main/res/navigation/news_nav_graph.xml
+++ b/app/src/main/res/navigation/news_nav_graph.xml
@@ -20,7 +20,11 @@
     <fragment
         android:id="@+id/articleFragment"
         android:name="com.sparklead.newsapp.ui.fragments.ArticleFragment"
-        android:label="ArticleFragment" />
+        android:label="ArticleFragment" >
+        <argument
+            android:name="article"
+            app:argType="com.sparklead.newsapp.models.Article" />
+    </fragment>
     <fragment
         android:id="@+id/searchNewsFragment"
         android:name="com.sparklead.newsapp.ui.fragments.SearchNewsFragment"
